# freecard-itwin-plugin

./: .gitignore  LICENSE  PROPOSAL.md  README.md
.github/workflows/: ci.yml
freecad-plugin/: pyproject.toml
freecad-plugin/freecad_itwin/: __init__.py  assembly.py  bundle.py  change_detect.py  exporter.py  hash_verify.py  importer.py  manifest_schema.json  parametric.py  sketch.py  techdraw.py
freecad-plugin/tests/: test_bundle.py  test_change_detect.py  test_integration.py
itwin-connector/: jest.config.js  package-lock.json  package.json  tsconfig.json
itwin-connector/src/: FreeCAD.ecschema.xml  bundle-reader.ts  cli.ts  connector.ts  index.ts  types.ts
itwin-connector/tests/: connector.test.ts
