[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "freecad-itwin"
version = "0.1.0"
description = "FreeCAD to iTwin.js iModel export plugin"
license = "LGPL-2.1-only"
requires-python = ">=3.9"
authors = [{ name = "Affan Khan" }]
readme = "README.md"

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
